# gamma

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  INSPECTION_REPORT.md  PROJECT_INDEX.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  TESTING_OPENAI.md  WORKLOG-2026-03-11.md  assistant_build_order.md  favicon.txt  fix_report.md  gamma-stage1-report.md  gamma.db.backup-20260424-022634  just-rayen-rico-transcript-research.md  live_voice_status.md  pyproject.toml  riko_clone_plan.md  riko_clone_project_spec.md  riko_phase1_checklist.md
assets/: README.md
config/: app.example.toml  app.toml  memory.toml  models.toml  persona.toml  persona.yaml  safety_banned_words.txt  scenario.yaml  users.toml  voices.example.toml  voices.presets.toml  voices.toml
data/: README.md
desktop/: gamma-dashboard.desktop  gamma-tray.desktop
gamma/: config.py  main.py  run_live_voice_worker.py  run_local_voice_loop.py  run_mic_voice_loop.py  run_prepare_tts_dataset.py  run_stage_and_prepare_tts_dataset.py  run_transcribe.py  run_tts_dataset_gui.py  run_tts_test.py  run_tts_test_henya.py  run_voice_mode.py  run_voice_roundtrip.py
helper_projects/: README.md
images/: clean_Photoroom name.bat
packaging/: build.bat  build.sh  tts_dataset_gui.spec
scripts/: START_ALL.sh  build_tts_dataset_gui_exe.py  export_shana_tts_assets.py  install_gamma_linux.sh  install_rvc_linux.sh  launch_gpu.sh  launch_qwen_tts.sh  open_gamma.py  open_gamma_linux.sh  open_gamma_windows.cmd  open_gamma_windows.py  patch_rvc_for_gamma.py  qwen_tts_server.py  start_all.sh  start_dashboard.py  start_dashboard.sh  start_dashboard_linux.sh  start_dashboard_windows.py  start_gamma_tray.py  start_gamma_tray_linux.sh  start_gamma_tray_windows.cmd  start_gamma_tray_windows.py  start_gpt_sovits_linux.sh  start_gpt_sovits_windows.ps1  start_gpt_sovits_windows.py  start_local_proxy.sh  start_qwen_tts_server.py  start_shana.py  start_shana_linux.sh  start_shana_stream_stack.py  start_shana_stream_stack_linux.sh  start_shana_voice_stack.py  start_shana_voice_stack_linux.sh  start_shana_windows.py  start_with_gpu_isolation.sh  startup.sh  stop_gpt_sovits_linux.sh  stop_gpt_sovits_windows.ps1  stop_gpt_sovits_windows.py  stop_local_proxy.sh  (+6 more)
specs/: README.md  (+22 more)
(+260 files in other folders)
