[project]
name = "gamma"
version = "0.1.0"
description = "Gamma assistant scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "sqlmodel>=0.0.22",
  "openai>=1.40.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
  "faster-whisper>=1.1.0",
  "sounddevice",
  "psutil>=5.9.8",
  "pillow>=10.4.0",
  "pystray>=0.19.5",
  "python-multipart>=0.0.9",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gamma*"]

[tool.setuptools.package-data]
gamma = [
  "dashboard/static/*",
  "performer/static/*",
  "persona/*.md",
  "persona/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
